Updated to Neo4j 5.1.0 Added defaults section in xorcery-defaults.yaml, with enabled flag set to true. Can be set to false in tests to easily turn off everything